# easy_xtts_trainer

./: .gitignore  README.md  easy_xtts_trainer.py  pyproject.toml  requirements.txt
docs/: compatibility-notes.md
easy_xtts_trainer/: __init__.py  __main__.py  _legacy.py  cli.py  config.py  pipeline.py
easy_xtts_trainer/audio/: __init__.py  effects.py  preprocessing.py  processor.py
easy_xtts_trainer/dataset/: __init__.py  parsing.py
easy_xtts_trainer/session/: __init__.py  reuse.py
easy_xtts_trainer/text/: __init__.py  epub.py  segmentation.py
easy_xtts_trainer/transcription/: __init__.py  ctc.py  formats.py  whisperx.py
tests/: test_audio_effects.py  test_audio_preprocessing.py  test_audio_processor.py  test_config.py  test_dataset_parsing.py  test_session_reuse.py  test_text_epub.py  test_text_segmentation.py  test_transcription_ctc.py  test_transcription_formats.py  test_transcription_whisperx.py
